# rust_mc_serv

./: .gitignore  Cargo.toml  README.md  parse_ids.py  rustfmt.toml  shell.nix
sniff-packets/: Cargo.toml
sniff-packets/src/: main.rs
sniff_packets/: Cargo.toml
src/: config.rs  context.rs  d.rs  data.rs  event.rs  lib.rs  main.rs  player.rs  pohuy.rs
src/data/: component.rs  mod.rs  slot.rs  sound.rs  text_component.rs
src/event/: mod.rs
src/minecraft/world/: entity.rs  player.rs
src/play/: config.rs  helper.rs  mod.rs  planner.rs
src/player/: context.rs  helper.rs
src/protocol/: handler.rs  id.rs  mod.rs  play.rs
src/server/: config.rs  context.rs  mod.rs  protocol.rs
src/server/data/: mod.rs  text_component.rs
src/server/event/: mod.rs
src/server/player/: context.rs  helper.rs  mod.rs  protocol.rs
src/server/protocol/: handler.rs  id.rs  mod.rs  play.rs
