[package]
name = "rust_minecraft_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_mc_proto = "0.1.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["macros"] }
serde_default = "0.2.0"
toml = "0.8.22"
itertools = "0.14.0"
palette = "0.7.6"
fastnbt = "2.5.0"
colog = "1.3.0"
log = "0.4.27"
