[package]
name = "rust_minecraft_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_mc_proto = "0.1.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["macros"] }
serde_default = "0.2.0"
toml = "0.8.22"
itertools = "0.14.0"
palette = "0.7.6"
craftflow-nbt = "2.1.0"
colog = "1.3.0"
log = "0.4.27"
uuid = "1.16.0"
dashmap = "6.1.0"
paste = "1.0.15"
ignore-result = "0.2.0"
